remade board and cell and all logic in controller